// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > Input alignVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签左对齐
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签居中
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--center t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签右对齐
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Input > Input bannerVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-horizontal t-input--border input-demo"
  data-v-6c136f2f=""
>
  <div
    class="t-input__wrap--prefix"
  >
    <!---->
    <div
      class="t-input__label"
    >
      标签文字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        name=""
        placeholder="请输入文字"
        spellcheck="false"
        style="--td-input-cursor-color: #0052d9;"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`Input > Input baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        
        <div
          class="custom-label"
        >
          标签文字
        </div>
        
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Input > Input borderedVue demo works fine 1`] = `
<div
  class="input-demo"
  data-v-f23aff25=""
>
  <div
    class="input-demo__summary"
    data-v-f23aff25=""
  >
    标签文字
  </div>
  <div
    class="t-input t-input--layout-horizontal custom-input"
    data-v-f23aff25=""
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-error-circle-filled"
            data-v-f23aff25=""
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input > Input customVue demo works fine 1`] = `
<div
  class="input-demo"
  data-v-c3916633=""
>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
    data-v-c3916633=""
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input > Input labelVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-horizontal t-input--border"
>
  <div
    class="t-input__wrap--prefix"
  >
    <!---->
    <div
      class="t-input__label"
    >
      标签超长时最多十个字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        name=""
        placeholder="请输入文字"
        spellcheck="false"
        style="--td-input-cursor-color: #0052d9;"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`Input > Input layoutVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-vertical t-input--border"
>
  <div
    class="t-input__wrap--prefix"
  >
    <!---->
    <div
      class="t-input__label"
    >
      标签文字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        name=""
        placeholder="请输入文字"
        spellcheck="false"
        style="--td-input-cursor-color: #0052d9;"
        type="text"
      />
      <!---->
      <!---->
      <div
        class="t-input__wrap--suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-error-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
            fill="currentColor"
          />
        </svg>
        
      </div>
    </div>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`Input > Input maxLengthVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        最大输入10个字符
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        最大输入10个字符，汉字算两个
      </div>
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Input > Input mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Input 输入框
  </h1>
  <p
    class="summary"
  >
    用于单行文本信息输入。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            
            <div
              class="custom-label"
            >
              标签文字
            </div>
            
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            <!---->
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带字数限制输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            最大输入10个字符
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            最大输入10个字符，汉字算两个
          </div>
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带操作输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-info-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
                  fill="currentColor"
                />
              </svg>
              
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入手机号码"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="tel"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        
        <button
          aria-disabled="false"
          class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
             操作按钮 
            
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-user-avatar"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M2 2L22 2L22 22L2 22L2 2ZM19.5 20H20L20 4L4 4L4 20H4.5C4.5 17.2386 6.73858 15 9.5 15H14.5C17.2614 15 19.5 17.2386 19.5 20ZM12 7C10.6193 7 9.5 8.11929 9.5 9.5C9.5 10.8807 10.6193 12 12 12C13.3807 12 14.5 10.8807 14.5 9.5C14.5 8.11929 13.3807 7 12 7ZM7.5 9.5C7.5 7.01472 9.51472 5 12 5C14.4853 5 16.5 7.01472 16.5 9.5C16.5 11.9853 14.4853 14 12 14C9.51472 14 7.5 11.9853 7.5 9.5ZM9.5 17C7.84315 17 6.5 18.3431 6.5 20L17.5 20C17.5 18.3431 16.1569 17 14.5 17H9.5Z"
                  fill="currentColor"
                />
              </svg>
              
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图标输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M17.5 3.5C15.8431 3.5 14.5 4.84315 14.5 6.5C14.5 8.15685 15.8431 9.5 17.5 9.5C19.1569 9.5 20.5 8.15685 20.5 6.5C20.5 4.84315 19.1569 3.5 17.5 3.5ZM12.5 6.5C12.5 3.73858 14.7386 1.5 17.5 1.5C20.2614 1.5 22.5 3.73858 22.5 6.5C22.5 9.26142 20.2614 11.5 17.5 11.5C14.7386 11.5 12.5 9.26142 12.5 6.5ZM2 2H11V11H2V2ZM4 4V9H9V4H4ZM2 13H11V22H2V13ZM4 15V20H9V15H4ZM13 13H22V22H13V13ZM20 15H15V20H20V15Z"
                fill="currentColor"
              />
            </svg>
            
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M17.5 3.5C15.8431 3.5 14.5 4.84315 14.5 6.5C14.5 8.15685 15.8431 9.5 17.5 9.5C19.1569 9.5 20.5 8.15685 20.5 6.5C20.5 4.84315 19.1569 3.5 17.5 3.5ZM12.5 6.5C12.5 3.73858 14.7386 1.5 17.5 1.5C20.2614 1.5 22.5 3.73858 22.5 6.5C22.5 9.26142 20.2614 11.5 17.5 11.5C14.7386 11.5 12.5 9.26142 12.5 6.5ZM2 2H11V11H2V2ZM4 4V9H9V4H4ZM2 13H11V22H2V13ZM4 15V20H9V15H4ZM13 13H22V22H13V13ZM20 15H15V20H20V15Z"
                fill="currentColor"
              />
            </svg>
            
          </div>
          <div
            class="t-input__label"
          >
            <!---->
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        特定类型输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            输入密码
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default t-input--password"
              name=""
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="password"
            />
            <!---->
            <!---->
            <div
              class="t-input__wrap--suffix-icon"
            >
              <svg
                class="t-icon t-icon-browse-off"
                fill="none"
                height="1em"
                viewBox="0 0 26 24"
                width="1em"
              >
                <path
                  d="M3.99999 1.58582L10.1714 7.75774L17.2425 14.8288L23.4137 21L21.9995 22.4142L19.0345 19.4492C17.2447 20.4377 15.1866 21.0001 12.9996 21.0001C7.42102 21.0001 2.69842 17.3465 1.08922 12.3042L0.992188 12.0001L1.08922 11.6961C1.85645 9.29201 3.33009 7.20571 5.26511 5.67975L2.58567 2.99993L3.99999 1.58582ZM6.69098 7.10574C5.05507 8.33729 3.79122 10.0353 3.09676 12.0001C4.53843 16.0793 8.42915 19.0001 12.9996 19.0001C14.6314 19.0001 16.1745 18.6285 17.5507 17.9655L15.7571 16.1719C14.9668 16.695 14.0185 17.0003 12.9999 17.0003C10.2385 17.0003 7.99989 14.7618 7.99989 12.0003C7.99989 10.9817 8.3052 10.0334 8.82835 9.24312L6.69098 7.10574ZM10.292 10.7068C10.1046 11.0984 9.99989 11.5368 9.99989 12.0003C9.99989 13.6572 11.343 15.0003 12.9999 15.0003C13.4634 15.0003 13.9018 14.8956 14.2934 14.7082L10.292 10.7068ZM13 5.00003C12.4234 5.00003 11.8583 5.04642 11.3081 5.13548L10.321 5.29527L10.0014 3.32097L10.9885 3.16117C11.644 3.05508 12.3159 3.00003 13 3.00003C18.5786 3.00003 23.3012 6.65367 24.9104 11.696L25.0074 12L24.9104 12.3041C24.4968 13.5999 23.878 14.8034 23.0926 15.8763L22.5019 16.6833L20.8881 15.5019L21.4788 14.695C22.0769 13.8778 22.5595 12.9715 22.9028 12C21.4612 7.92082 17.5704 5.00003 13 5.00003ZM13.5132 6.92636L14.4691 7.21985C16.0499 7.70515 17.2953 8.95049 17.7806 10.5313L18.0741 11.4873L16.1621 12.0742L15.8687 11.1183C15.578 10.1715 14.829 9.42243 13.8822 9.13178L12.9262 8.8383L13.5132 6.92636Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            验证码
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="输入验证码"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <div
              class="t-input__wrap--suffix"
            >
              
              <div
                class="suffix"
              >
                <div
                  class="suffix--line"
                />
                <div
                  aria-label="验证码"
                  aria-role="img"
                  class="t-image t-image--square image"
                  mode="heightFix"
                >
                  <div
                    class="t-image__mask"
                  >
                    <div
                      class="t-loading"
                      style="font-size: 20px;"
                    >
                      <div
                        class="t-loading__dots"
                        style="animation-duration: 800ms; width: 20px; height: 20px;"
                      >
                        
                        <div
                          class="t-loading__dot"
                          style="animation-duration: 0.8s; animation-delay: 0s;"
                        />
                        <div
                          class="t-loading__dot"
                          style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                        />
                        <div
                          class="t-loading__dot"
                          style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                        />
                        
                      </div>
                      <!---->
                      <!---->
                    </div>
                  </div>
                  <picture>
                    <!---->
                    <img
                      alt=""
                      class="t-image__img"
                      src="https://wwcdn.weixin.qq.com/node/wework/images/202010241547.ac6876be9c.png"
                      style="object-fit: fill; object-position: center;"
                    />
                  </picture>
                </div>
              </div>
              
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            手机号
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="输入手机号码"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <div
              class="t-input__wrap--suffix"
            >
              
              <div
                class="suffix"
              >
                <div
                  class="suffix--line"
                />
                <div
                  aria-role="button"
                  class="verify"
                >
                  发送验证码
                </div>
              </div>
              
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            价格
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              name=""
              placeholder="0.00"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="number"
            />
            <!---->
            <div
              class="t-input__wrap--suffix"
            >
              元
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            数量
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              name=""
              placeholder="填写个数"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="number"
            />
            <!---->
            <div
              class="t-input__wrap--suffix"
            >
              个
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        输入框状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--error"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--error"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-close"
                fill="none"
                height="1em"
                style="color: rgb(213, 73, 65);"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
                  fill="currentColor"
                />
              </svg>
              
            </div>
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            辅助说明
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default t-input__control--disabled"
              disabled=""
              name=""
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        信息超长状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签超长时最多十个字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        内容位置
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签左对齐
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签居中
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--center t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签右对齐
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        竖排样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-vertical t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
                  fill="currentColor"
                />
              </svg>
              
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        非通栏样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-horizontal t-input--border input-demo"
        data-v-6c136f2f=""
      >
        <div
          class="t-input__wrap--prefix"
        >
          <!---->
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              name=""
              placeholder="请输入文字"
              spellcheck="false"
              style="--td-input-cursor-color: #0052d9;"
              type="text"
            />
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        标签外置样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="input-demo"
        data-v-f23aff25=""
      >
        <div
          class="input-demo__summary"
          data-v-f23aff25=""
        >
          标签文字
        </div>
        <div
          class="t-input t-input--layout-horizontal custom-input"
          data-v-f23aff25=""
        >
          <div
            class="t-input__wrap--prefix"
          >
            <!---->
            <div
              class="t-input__label"
            >
              <!---->
            </div>
          </div>
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input__content t-input--default"
            >
              <input
                autocomplete="Off"
                class="t-input__control t-input--default"
                name=""
                placeholder="请输入文字"
                spellcheck="false"
                style="--td-input-cursor-color: #0052d9;"
                type="text"
              />
              <!---->
              <!---->
              <div
                class="t-input__wrap--suffix-icon"
              >
                
                <svg
                  class="t-icon t-icon-error-circle-filled"
                  data-v-f23aff25=""
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
                    fill="currentColor"
                  />
                </svg>
                
              </div>
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义样式输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="input-demo"
        data-v-c3916633=""
      >
        <div
          class="t-input t-input--layout-horizontal t-input--border"
          data-v-c3916633=""
        >
          <div
            class="t-input__wrap--prefix"
          >
            <!---->
            <div
              class="t-input__label"
            >
              标签文字
            </div>
          </div>
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input__content t-input--default"
            >
              <input
                autocomplete="Off"
                class="t-input__control t-input--default"
                name=""
                placeholder="请输入文字"
                spellcheck="false"
                style="--td-input-cursor-color: #0052d9;"
                type="text"
              />
              <!---->
              <!---->
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Input > Input prefixVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.5 3.5C15.8431 3.5 14.5 4.84315 14.5 6.5C14.5 8.15685 15.8431 9.5 17.5 9.5C19.1569 9.5 20.5 8.15685 20.5 6.5C20.5 4.84315 19.1569 3.5 17.5 3.5ZM12.5 6.5C12.5 3.73858 14.7386 1.5 17.5 1.5C20.2614 1.5 22.5 3.73858 22.5 6.5C22.5 9.26142 20.2614 11.5 17.5 11.5C14.7386 11.5 12.5 9.26142 12.5 6.5ZM2 2H11V11H2V2ZM4 4V9H9V4H4ZM2 13H11V22H2V13ZM4 15V20H9V15H4ZM13 13H22V22H13V13ZM20 15H15V20H20V15Z"
            fill="currentColor"
          />
        </svg>
        
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.5 3.5C15.8431 3.5 14.5 4.84315 14.5 6.5C14.5 8.15685 15.8431 9.5 17.5 9.5C19.1569 9.5 20.5 8.15685 20.5 6.5C20.5 4.84315 19.1569 3.5 17.5 3.5ZM12.5 6.5C12.5 3.73858 14.7386 1.5 17.5 1.5C20.2614 1.5 22.5 3.73858 22.5 6.5C22.5 9.26142 20.2614 11.5 17.5 11.5C14.7386 11.5 12.5 9.26142 12.5 6.5ZM2 2H11V11H2V2ZM4 4V9H9V4H4ZM2 13H11V22H2V13ZM4 15V20H9V15H4ZM13 13H22V22H13V13ZM20 15H15V20H20V15Z"
            fill="currentColor"
          />
        </svg>
        
      </div>
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Input > Input specialVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        输入密码
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default t-input--password"
          name=""
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="password"
        />
        <!---->
        <!---->
        <div
          class="t-input__wrap--suffix-icon"
        >
          <svg
            class="t-icon t-icon-browse-off"
            fill="none"
            height="1em"
            viewBox="0 0 26 24"
            width="1em"
          >
            <path
              d="M3.99999 1.58582L10.1714 7.75774L17.2425 14.8288L23.4137 21L21.9995 22.4142L19.0345 19.4492C17.2447 20.4377 15.1866 21.0001 12.9996 21.0001C7.42102 21.0001 2.69842 17.3465 1.08922 12.3042L0.992188 12.0001L1.08922 11.6961C1.85645 9.29201 3.33009 7.20571 5.26511 5.67975L2.58567 2.99993L3.99999 1.58582ZM6.69098 7.10574C5.05507 8.33729 3.79122 10.0353 3.09676 12.0001C4.53843 16.0793 8.42915 19.0001 12.9996 19.0001C14.6314 19.0001 16.1745 18.6285 17.5507 17.9655L15.7571 16.1719C14.9668 16.695 14.0185 17.0003 12.9999 17.0003C10.2385 17.0003 7.99989 14.7618 7.99989 12.0003C7.99989 10.9817 8.3052 10.0334 8.82835 9.24312L6.69098 7.10574ZM10.292 10.7068C10.1046 11.0984 9.99989 11.5368 9.99989 12.0003C9.99989 13.6572 11.343 15.0003 12.9999 15.0003C13.4634 15.0003 13.9018 14.8956 14.2934 14.7082L10.292 10.7068ZM13 5.00003C12.4234 5.00003 11.8583 5.04642 11.3081 5.13548L10.321 5.29527L10.0014 3.32097L10.9885 3.16117C11.644 3.05508 12.3159 3.00003 13 3.00003C18.5786 3.00003 23.3012 6.65367 24.9104 11.696L25.0074 12L24.9104 12.3041C24.4968 13.5999 23.878 14.8034 23.0926 15.8763L22.5019 16.6833L20.8881 15.5019L21.4788 14.695C22.0769 13.8778 22.5595 12.9715 22.9028 12C21.4612 7.92082 17.5704 5.00003 13 5.00003ZM13.5132 6.92636L14.4691 7.21985C16.0499 7.70515 17.2953 8.95049 17.7806 10.5313L18.0741 11.4873L16.1621 12.0742L15.8687 11.1183C15.578 10.1715 14.829 9.42243 13.8822 9.13178L12.9262 8.8383L13.5132 6.92636Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        验证码
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="输入验证码"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <div
          class="t-input__wrap--suffix"
        >
          
          <div
            class="suffix"
          >
            <div
              class="suffix--line"
            />
            <div
              aria-label="验证码"
              aria-role="img"
              class="t-image t-image--square image"
              mode="heightFix"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://wwcdn.weixin.qq.com/node/wework/images/202010241547.ac6876be9c.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
          </div>
          
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        手机号
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="输入手机号码"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <div
          class="t-input__wrap--suffix"
        >
          
          <div
            class="suffix"
          >
            <div
              class="suffix--line"
            />
            <div
              aria-role="button"
              class="verify"
            >
              发送验证码
            </div>
          </div>
          
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        价格
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          name=""
          placeholder="0.00"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="number"
        />
        <!---->
        <div
          class="t-input__wrap--suffix"
        >
          元
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        数量
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          name=""
          placeholder="填写个数"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="number"
        />
        <!---->
        <div
          class="t-input__wrap--suffix"
        >
          个
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Input > Input statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--error"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--error"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            style="color: rgb(213, 73, 65);"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        辅助说明
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default t-input__control--disabled"
          disabled=""
          name=""
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Input > Input suffixVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入手机号码"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="tel"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
    <button
      aria-disabled="false"
      class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
         操作按钮 
        
      </span>
      <!---->
    </button>
    
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <!---->
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          name=""
          placeholder="请输入文字"
          spellcheck="false"
          style="--td-input-cursor-color: #0052d9;"
          type="text"
        />
        <!---->
        <!---->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-user-avatar"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M2 2L22 2L22 22L2 22L2 2ZM19.5 20H20L20 4L4 4L4 20H4.5C4.5 17.2386 6.73858 15 9.5 15H14.5C17.2614 15 19.5 17.2386 19.5 20ZM12 7C10.6193 7 9.5 8.11929 9.5 9.5C9.5 10.8807 10.6193 12 12 12C13.3807 12 14.5 10.8807 14.5 9.5C14.5 8.11929 13.3807 7 12 7ZM7.5 9.5C7.5 7.01472 9.51472 5 12 5C14.4853 5 16.5 7.01472 16.5 9.5C16.5 11.9853 14.4853 14 12 14C9.51472 14 7.5 11.9853 7.5 9.5ZM9.5 17C7.84315 17 6.5 18.3431 6.5 20L17.5 20C17.5 18.3431 16.1569 17 14.5 17H9.5Z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;
